--- a/index.html
+++ b/index.html
@@ -10,74 +10,106 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Squeezebox Portfolio Template | CodyHouse</title>
+	<title>Marc Wright</title>
 </head>
 <body>
 	<div class="cd-intro-block">
 		<div class="content-wrapper">
-			<h1>Squeezebox Portfolio Template</h1>
-			<a href="#0" class='cd-btn' data-action="show-projects">Show projects</a>
+			<h1>Marc Wright</h1>
+			<a href="#0" class='cd-btn' style="background-color: #33cc33" data-action="show-projects">Projects</a>
+			<a href="https://github.com/marcwright" style="background-color: #03031b" target="blank" class='cd-btn'>GitHub</a>
+			<a href="https://www.linkedin.com/in/marcwright1" style="background-color: #0000ff" target="blank" class='cd-btn'>LinkedIn</a>
+			<a href="https://soundcloud.com/marcwright" style="background-color: #ff6600" target="blank" class='cd-btn'>Soundcloud</a>
+			<a href="https://twitter.com/m4rcw" style="background-color: #0099ff" target="blank" class='cd-btn'>Twitter</a>
+			<a href="https://marcwrightmusic.wordpress.com/" style="background-color: #ff3300" target="blank" class='cd-btn'>Blog</a>
+			<a href="mailto:marc.wright@gmail.com?Subject=Hello from marcwright.com" style="background-color: #d8d7db" target="_top" class='cd-btn'>Email</a>
+			<ul class="nav navbar-nav">
+			<!-- <div id="icons">
+        <li><a href="https://github.com/marcwright" target="blank">
+              <img src="img/gh_logo.jpg" height="25px" width="25px"/>
+            </a>
+        </li>
+        <li style="margin-top:-5px" class="hvr-pulse"><a href="https://www.linkedin.com/in/marcwright1" target="blank">
+              <img src="img/li_logo.png" height="25px" width="25px"/>
+            </a>
+        </li>
+        <li style="margin-top:-6px" class="hvr-pulse"><a href="https://soundcloud.com/marcwright" target="blank">
+              <img src="img/sc_logo.jpg" height="29px" width="29px"/>
+            </a>
+        </li>
+        <li style="margin-top:-6px" class="hvr-pulse"><a href="https://twitter.com/m4rcw" target="blank">
+              <img src="img/twitter_logo.png" height="28px" width="28px"/>
+            </a>
+        </li>
+
+        <li style="margin-top:-6px" class="hvr-pulse"><a href="mailto:marc.wright@gmail.com?Subject=Hello from marcwright.com" target="_top">
+              <img src="img/mail_logo.png" height="27px" width="27px"/>
+            </a>
+        </li>
+        </div> -->
+      </ul>
 		</div>
 	</div> <!-- .cd-intro-block -->
 
 	<div class="cd-projects-wrapper">
 		<ul class="cd-slider">
 			<li class="current">
-				<a href="#0">
-					<img src="img/img.png" alt="project image">
+				<a href="#oz">
+					<img src="img/oz390.png" alt="project image">
 					<div class="project-info">
-						<h2>Project 1</h2>
-						<p>Lorem ipsum dolor sit amet.</p>
+						<h2>Ozymandias Media</h2>
+						<p>A rebrand of a production company website</p>
+						<!-- <p>Technologies Used: HTML5, CSS, Parallax, Javascript, jQuery</p> -->
 					</div>
 				</a>
 			</li>
 
 			<li>
-				<a href="#0">
-					<img src="img/img.png" alt="project image">
+				<a href="#zen">
+					<img src="img/zen390.png" alt="project image">
 					<div class="project-info">
-						<h2>Project 2</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, dicta.</p>
+						<h2>Zen Foods</h2>
+						<p>A healthy nutrition subscription program</p>
 					</div>
 				</a>
 			</li>
 
 			<li>
-				<a href="#0">
-					<img src="img/img.png" alt="project image">
+				<a href="#groovv">
+					<img src="img/groovv390.png" alt="project image">
 					<div class="project-info">
-						<h2>Project 3</h2>
-						<p>Lorem ipsum dolor sit amet.</p>
+						<h2>Groovv</h2>
+						<p>A B2B integrated payment system</p>
 					</div>
 				</a>
 			</li>
 
 			<li>
-				<a href="#0">
-					<img src="img/img.png" alt="project image">
+				<a href="#wcib">
+					<img src="img/wcib390.png" alt="project image">
 					<div class="project-info">
-						<h2>Project 4</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+						<h2>What Can I Bring?</h2>
+						<p>Track party guests in real time and request that they pick up a last minute item</p>
 					</div>
 				</a>
 			</li>
 
 			<li>
-				<a href="#0">
-					<img src="img/img.png" alt="project image">
+				<a href="#dog">
+					<img src="img/dogsandmen390.png" alt="project image">
 					<div class="project-info">
-						<h2>Project 5</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur.</p>
+						<h2>Of Dogs and Men</h2>
+						<p>Contributor to this documentary website</p>
 					</div>
 				</a>
 			</li>
 
 			<li>
-				<a href="#0">
-					<img src="img/img.png" alt="project image">
+				<a href="#tic">
+					<img src="img/tic.png" alt="project image">
 					<div class="project-info">
-						<h2>Project 6</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat.</p>
+						<h2>Tic-Tac-Toe</h2>
+						<p>Jib-Jab for Tic-Tac-Toe</p>
 					</div>
 				</a>
 			</li>
@@ -92,25 +124,6 @@
 				</a>
 			</li>
 			
-			<li>
-				<a href="#0">
-					<img src="img/img.png" alt="project image">
-					<div class="project-info">
-						<h2>Project 8</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-					</div>
-				</a>
-			</li>
-
-			<li>
-				<a href="#0">
-					<img src="img/img.png" alt="project image">
-					<div class="project-info">
-						<h2>Project 9</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-					</div>
-				</a>
-			</li>
 		</ul>
 
 		<ul class="cd-slider-navigation cd-img-replace">
@@ -119,22 +132,73 @@
 		</ul> <!-- .cd-slider-navigation -->
 	</div> <!-- .cd-projects-wrapper -->
 
-	<div class="cd-project-content">
+	<div class="cd-project-content" id="oz">
 		<div>
-			<h2>Project title here</h2>
+			<a href="http://www.ozymandiasmedia.com">
+				<h2>Ozymandias</h2>
+			</a>
 			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
 			</p>
-			<p>
-				Illum quaerat asperiores aliquam voluptate saepe omnis porro excepturi in atque veritatis sapiente ipsam voluptates iste amet deserunt ullam error pariatur, magni consectetur optio nostrum minima dolorum. Soluta animi nihil doloremque ipsa incidunt vitae architecto beatae, maxime libero, dolore corporis vero porro tenetur ipsam modi repudiandae magnam enim, quibusdam sit.
-			</p>
-			<p>
-				Illum quaerat asperiores aliquam voluptate saepe omnis porro excepturi in atque veritatis sapiente ipsam voluptates iste amet deserunt ullam error pariatur, magni consectetur optio nostrum minima dolorum. Soluta animi nihil doloremque ipsa incidunt vitae architecto beatae, maxime libero, dolore corporis vero porro tenetur ipsam modi repudiandae magnam enim, quibusdam sit.
-			</p>
 		</div>
 		<a href="#0" class="close cd-img-replace">Close</a>
 	</div> <!-- .cd-project-content -->
+
+	<div class="cd-project-content" id="zen">
+		<div>
+			<h2>Zen Foods</h2>
+			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
+			</p>
+		</div>
+		<a href="#0" class="close cd-img-replace">Close</a>
+	</div> 
+
+	<div class="cd-project-content" id="groovv">
+		<div>
+			<h2>Groovv</h2>
+			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
+			</p>
+		</div>
+		<a href="#0" class="close cd-img-replace">Close</a>
+	</div> 
+
+	<div class="cd-project-content" id="wcib">
+		<div>
+			<h2>What Can I Bring?</h2>
+			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
+			</p>
+		</div>
+		<a href="#0" class="close cd-img-replace">Close</a>
+	</div> 
+
+	<div class="cd-project-content" id="dog">
+		<div>
+			<h2>Of Dogs and Men</h2>
+			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
+			</p>
+		</div>
+		<a href="#0" class="close cd-img-replace">Close</a>
+	</div> 
+
+	<div class="cd-project-content" id="tic">
+		<div>
+			<h2>Tic Tac Toe</h2>
+			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
+			</p>
+		</div>
+		<a href="#0" class="close cd-img-replace">Close</a>
+	</div> 
 <script src="js/jquery-2.1.4.js"></script>
 <script src="js/jquery.mobile.custom.min.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
