added goole font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
@@ -22,6 +23,7 @@
 			<a href="https://soundcloud.com/marcwright" style="background-color: #ff6600" target="blank" class='cd-btn'>Soundcloud</a>
 			<a href="https://twitter.com/m4rcw" style="background-color: #0099ff" target="blank" class='cd-btn'>Twitter</a>
 			<a href="https://marcwrightmusic.wordpress.com/" style="background-color: #ff3300" target="blank" class='cd-btn'>Blog</a>
+			<a href="https://marcwrightmusic.wordpress.com/" style="background-color: red" target="blank" class='cd-btn'>Vimeo</a>
 			<a href="mailto:marc.wright@gmail.com?Subject=Hello from marcwright.com" style="background-color: #d8d7db" target="_top" class='cd-btn'>Email</a>
 			<ul class="nav navbar-nav">
 			<!-- <div id="icons">
