--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			<a href="https://soundcloud.com/marcwright" style="background-color: #ff6600" target="blank" class='cd-btn'>Soundcloud</a>
 			<a href="https://twitter.com/m4rcw" style="background-color: #0099ff" target="blank" class='cd-btn'>Twitter</a>
 			<a href="https://marcwrightmusic.wordpress.com/" style="background-color: #ff3300" target="blank" class='cd-btn'>Blog</a>
-			<a href="https://marcwrightmusic.wordpress.com/" style="background-color: red" target="blank" class='cd-btn'>Vimeo</a>
-			<a href="mailto:marc.wright@gmail.com?Subject=Hello from marcwright.com" style="background-color: #d8d7db" target="_top" class='cd-btn'>Email</a>
+			<a href="https://marcwrightmusic.wordpress.com/" style="background-color: red" target="blank" class='cd-btn'>You Tube</a>
+			<a href="mailto:marc.wright@gmail.com?Subject=Hello from marcwright.com" style="background-color: #565656" target="_top" class='cd-btn'>Email</a>
 			<ul class="nav navbar-nav">
 			<!-- <div id="icons">
         <li><a href="https://github.com/marcwright" target="blank">
@@ -116,7 +116,7 @@
 				</a>
 			</li>
 
-			<li>
+			<!-- <li>
 				<a href="#0">
 					<img src="img/img.png" alt="project image">
 					<div class="project-info">
@@ -124,7 +124,7 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 					</div>
 				</a>
-			</li>
+			</li> -->
 			
 		</ul>
 
