added detail and links

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700,400italic' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
+<!-- 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> -->
+<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
@@ -23,7 +24,7 @@
 			<a href="https://soundcloud.com/marcwright" style="background-color: #ff6600" target="blank" class='cd-btn'>Soundcloud</a>
 			<a href="https://twitter.com/m4rcw" style="background-color: #0099ff" target="blank" class='cd-btn'>Twitter</a>
 			<a href="https://marcwrightmusic.wordpress.com/" style="background-color: #ff3300" target="blank" class='cd-btn'>Blog</a>
-			<a href="https://marcwrightmusic.wordpress.com/" style="background-color: red" target="blank" class='cd-btn'>You Tube</a>
+			<a href="https://www.youtube.com/channel/UC_YNTwcoNAPvsyjhe71liDw" style="background-color: red" target="blank" class='cd-btn'>You Tube</a>
 			<a href="mailto:marc.wright@gmail.com?Subject=Hello from marcwright.com" style="background-color: #565656" target="_top" class='cd-btn'>Email</a>
 			<ul class="nav navbar-nav">
 			<!-- <div id="icons">
@@ -87,6 +88,15 @@
 			</li>
 
 			<li>
+				<a href="#dog">
+					<img src="img/dogsandmen390.png" alt="project image">
+					<div class="project-info">
+						<h2>Of Dogs and Men</h2>
+						<p>Contributor to this documentary website</p>
+					</div>
+				</a>
+			</li>
+			<li>
 				<a href="#wcib">
 					<img src="img/wcib390.png" alt="project image">
 					<div class="project-info">
@@ -96,15 +106,6 @@
 				</a>
 			</li>
 
-			<li>
-				<a href="#dog">
-					<img src="img/dogsandmen390.png" alt="project image">
-					<div class="project-info">
-						<h2>Of Dogs and Men</h2>
-						<p>Contributor to this documentary website</p>
-					</div>
-				</a>
-			</li>
 
 			<li>
 				<a href="#tic">
@@ -135,13 +136,17 @@
 	</div> <!-- .cd-projects-wrapper -->
 
 	<div class="cd-project-content" id="oz">
-		<div>
-			<a href="http://www.ozymandiasmedia.com">
-				<h2>Ozymandias</h2>
-			</a>
-			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
+		<div>			
+			<h2>Ozymandias Media</h2>
+			<div>
+        <a href="http://ozymandiasmedia.com" target="_blank">
+          <img src="img/oz390.png"/>
+        </a>
+      </div>
+			
+			<em>A rebrand of a production company website</em>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
+				Technologies Used: HTML5, CSS, Parallax, Javascript, jQuery
 			</p>
 		</div>
 		<a href="#0" class="close cd-img-replace">Close</a>
@@ -149,10 +154,15 @@
 
 	<div class="cd-project-content" id="zen">
 		<div>
-			<h2>Zen Foods</h2>
-			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
+				<h2>Zen Foods</h2>
+				<div>
+					<a href="http://www.zenfoods.com/" target="_blank">
+						<img src="img/zen390.png"/>
+					</a>
+				</div>
+			<em>A healthy nutrition subscription program</em>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
+				Technologies Used: PHP, Wordpress, jQuery, HTML, CSS
 			</p>
 		</div>
 		<a href="#0" class="close cd-img-replace">Close</a>
@@ -161,20 +171,34 @@
 	<div class="cd-project-content" id="groovv">
 		<div>
 			<h2>Groovv</h2>
-			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
+			<div>
+				<a href="http://groovv.appspected.com/" target="_blank">
+					<img src="img/groovv390.png"/>
+				</a>
+			</div>
+
+			<em>A B2B integrated payment system</em>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
+				Technologies Used: PHP, Wordpress, jQuery, HTML, CSS
 			</p>
 		</div>
 		<a href="#0" class="close cd-img-replace">Close</a>
 	</div> 
 
 	<div class="cd-project-content" id="wcib">
+
 		<div>
 			<h2>What Can I Bring?</h2>
-			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
+			
+          <div>
+          	<a href="https://whatcanibring.herokuapp.com/" target="_blank">
+          		<img src="img/wcib390.png"/>
+          	</a>	
+          </div>
+      
+			<em>Track party guests in real time and request that they pick up a last minute item</em>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
+				Technologies Used: Ruby on Rails, Twilio, Google Maps, Material Design 
 			</p>
 		</div>
 		<a href="#0" class="close cd-img-replace">Close</a>
@@ -183,6 +207,12 @@
 	<div class="cd-project-content" id="dog">
 		<div>
 			<h2>Of Dogs and Men</h2>
+			<div>
+        <a href="http://ofdogsandmen.net/" target="_blank">
+      	 	<img src="img/dogsandmen390.png"/>
+        </a>	
+      </div>
+
 			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
@@ -193,7 +223,12 @@
 
 	<div class="cd-project-content" id="tic">
 		<div>
-			<h2>Tic Tac Toe</h2>
+			<h2>Tic-Tac-Toe with Addie Finn + Cole</h2>
+			<div>
+        <a href="http://marcwright.github.io/addie-finn-cole/" target="_blank">
+         	<img src="img/tic.png"/>
+        </a>	
+      </div>
 			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
