added image icons

--- a/index.html
+++ b/index.html
@@ -17,15 +17,40 @@
 <body>
 	<div class="cd-intro-block">
 		<div class="content-wrapper">
-			<h1>Marc Wright</h1>
-			<a href="#0" class='cd-btn' style="background-color: #33cc33" data-action="show-projects">Projects</a>
-			<a href="https://github.com/marcwright" style="background-color: #03031b" target="blank" class='cd-btn'>GitHub</a>
-			<a href="https://www.linkedin.com/in/marcwright1" style="background-color: #0000ff" target="blank" class='cd-btn'>LinkedIn</a>
-			<a href="https://soundcloud.com/marcwright" style="background-color: #ff6600" target="blank" class='cd-btn'>Soundcloud</a>
-			<a href="https://twitter.com/m4rcw" style="background-color: #0099ff" target="blank" class='cd-btn'>Twitter</a>
-			<a href="https://marcwrightmusic.wordpress.com/" style="background-color: #ff3300" target="blank" class='cd-btn'>Blog</a>
-			<a href="https://www.youtube.com/channel/UC_YNTwcoNAPvsyjhe71liDw" style="background-color: red" target="blank" class='cd-btn'>You Tube</a>
-			<a href="mailto:marc.wright@gmail.com?Subject=Hello from marcwright.com" style="background-color: #565656" target="_top" class='cd-btn'>Email</a>
+			<h1 style="color:#565656">Marc Wright</h1>
+			
+			<a href="https://github.com/marcwright" target="blank" class='cd-btn'>
+				<img src="img/github.png">
+			</a>
+			
+			<a href="https://www.linkedin.com/in/marcwright1" target="blank" class='cd-btn'>
+				<img src="img/linkedin.png">
+			</a>
+
+			<a href="https://soundcloud.com/marcwright" target="blank" class='cd-btn'>
+			<img src="img/soundcloud.png">
+			</a>
+
+			<a href="https://twitter.com/m4rcw" target="blank" class='cd-btn'>
+				<img src="img/twitter.png">
+			</a>
+			<a href="https://marcwrightmusic.wordpress.com/" target="blank" class='cd-btn'>
+				<img src="img/wordpress.png">
+			</a>
+
+			<a href="https://www.youtube.com/channel/UC_YNTwcoNAPvsyjhe71liDw" target="blank" class='cd-btn'>
+			<img src="img/youtube.png">
+			</a>
+
+			<a href="mailto:marc.wright@gmail.com?Subject=Hello from marcwright.com" target="_top" class='cd-btn'>
+				<img src="img/blog.png">
+			</a>
+			<br>
+
+			<div style="padding-top:1em">
+				<a href="#0" class='cd-btn' style="background-color: #33cc33" data-action="show-projects">Work</a>
+			</div>	
+
 			<ul class="nav navbar-nav">
 			<!-- <div id="icons">
         <li><a href="https://github.com/marcwright" target="blank">
