shrunk icon size

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</a>
 
 			<a href="https://www.youtube.com/channel/UC_YNTwcoNAPvsyjhe71liDw" target="blank" class='cd-btn'>
-			<img src="img/youtube.png">
+				<img src="img/youtube.png">
 			</a>
 
 			<a href="mailto:marc.wright@gmail.com?Subject=Hello from marcwright.com" target="_top" class='cd-btn'>
@@ -48,10 +48,10 @@
 			<br>
 
 			<div style="padding-top:1em">
-				<a href="#0" class='cd-btn' style="background-color: #33cc33" data-action="show-projects">Work</a>
+				<a href="#0" class='cd-btn' style="color:#565656; height:5em; width: 5em;padding-top:2em" data-action="show-projects">Work</a>
 			</div>	
 
-			<ul class="nav navbar-nav">
+			<!-- <ul class="nav navbar-nav"> -->
 			<!-- <div id="icons">
         <li><a href="https://github.com/marcwright" target="blank">
               <img src="img/gh_logo.jpg" height="25px" width="25px"/>
@@ -75,7 +75,7 @@
             </a>
         </li>
         </div> -->
-      </ul>
+      <!-- </ul> -->
 		</div>
 	</div> <!-- .cd-intro-block -->
 
