added music gen app

--- a/index.html
+++ b/index.html
@@ -131,13 +131,22 @@
 				</a>
 			</li>
 
-
 			<li>
 				<a href="#tic">
 					<img src="img/tic.png" alt="project image">
 					<div class="project-info">
 						<h2>Tic-Tac-Toe</h2>
 						<p>Jib-Jab for Tic-Tac-Toe</p>
+					</div>
+				</a>
+			</li>
+
+			<li>
+				<a href="#song">
+					<img src="img/song.png" alt="project image">
+					<div class="project-info">
+						<h2>Lyric Sentiment App</h2>
+						<p>Analysis of the mood of an Artist's lyrics</p>
 					</div>
 				</a>
 			</li>
@@ -227,6 +236,25 @@
 			</p>
 		</div>
 		<a href="#0" class="close cd-img-replace">Close</a>
+	</div>
+
+	<div class="cd-project-content" id="song">
+
+		<div>
+			<h2>Song Lyric Sentiment App</h2>
+			
+          <div>
+          	<a href="https://lyric-sentiment-app.herokuapp.com/" target="_blank">
+          		<img src="img/song.png"/>
+          	</a>	
+          </div>
+      
+			<em>Compare the sentiment of lyrics between various artists</em>
+			<p>
+				Technologies Used: Express, Musix Match, jQuery 
+			</p>
+		</div>
+		<a href="#0" class="close cd-img-replace">Close</a>
 	</div> 
 
 	<div class="cd-project-content" id="dog">
@@ -238,9 +266,9 @@
         </a>	
       </div>
 
-			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
+			<em>Technologies Used: Wordpress</em>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
+				The website for the documentatry "Of Dogs and Men"
 			</p>
 		</div>
 		<a href="#0" class="close cd-img-replace">Close</a>
@@ -254,9 +282,9 @@
          	<img src="img/tic.png"/>
         </a>	
       </div>
-			<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ullam.</em>
+			<em>This will be a JibJab-ish Tic-Tac-Toe App</em>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus. 
+				Technologies Used: jQuery, Javascript
 			</p>
 		</div>
 		<a href="#0" class="close cd-img-replace">Close</a>
