update jekyll link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<a href="https://twitter.com/m4rcw" target="blank" class='cd-btn'>
 				<img src="img/twitter.png">
 			</a>
-			<a href="https://marcwrightmusic.wordpress.com/" target="blank" class='cd-btn'>
+			<a href="https://marcwright.github.io/firereadyaim/" target="blank" class='cd-btn'>
 				<img src="img/wordpress.png">
 			</a>
 
